--- a/app/assets/stylesheets/origin/css_yvjdhf.css.erb
+++ b/app/assets/stylesheets/origin/css_yvjdhf.css.erb
@@ -1,61 +1,61 @@
 @charset "utf-8";
 @font-face{
   font-family:'Museo Sans 100';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100-webfont.svg#museo_sans100") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-100-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-100-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-100-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-100-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-100-webfont.svg" %>#museo_sans100') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 100 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-100italic-webfont.svg#museo_sans100_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-100italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-100italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-100italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-100italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-100italic-webfont.svg" %>#museo_sans100_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 300';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300-webfont.svg#museo_sans300") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-300-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-300-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-300-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-300-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-300-webfont.svg" %>#museo_sans300') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 300 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-300italic-webfont.svg#museo_sans300_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-300italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-300italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-300italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-300italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-300italic-webfont.svg" %>#museo_sans300_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 500';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500-webfont.svg#museo_sans500") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-500-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-500-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-500-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-500-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-500-webfont.svg" %>#museo_sans500') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Sans 500 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-500italic-webfont.svg#museo_sans500_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-500italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-500italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-500italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-500italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-500italic-webfont.svg" %>#museo_sans500_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -71,11 +71,11 @@
 }
 @font-face{
   font-family:'Museo Sans 700 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museosans-700italic-webfont.svg#museo_sans700_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museosans-700italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museosans-700italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museosans-700italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museosans-700italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museosans-700italic-webfont.svg" %>#museo_sans700_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
@@ -91,31 +91,31 @@
 }
 @font-face{
   font-family:'Museo Slab 700 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-700italic-webfont.svg#museo_slab700_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museoslab-700italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museoslab-700italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-700italic-webfont.svg" %>#museo_slab700_italic') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Slab 900';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900-webfont.svg#museo_slab900") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museoslab-900-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museoslab-900-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900-webfont.svg" %>#museo_slab900') format("svg");
   font-weight:normal;
   font-style:normal;
 }
 @font-face{
   font-family:'Museo Slab 900 Italic';
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.eot");
-  src:url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.eot?#iefix") format("embedded-opentype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.woff") format("woff"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.ttf") format("truetype"),
-  url("/sites/all/themes/the_vegan_society/assets/fonts/museo-sans/exljbris_-_museoslab-900italic-webfont.svg#museo_slab900_italic") format("svg");
+  src:url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.eot" %>');
+  src:url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.eot" %>?#iefix') format("embedded-opentype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.woff" %>') format("woff"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.ttf" %>') format("truetype"),
+  url('<%= image_url "origin/exljbris_-_museoslab-900italic-webfont.svg" %>#museo_slab900_italic) format("svg");
   font-weight:normal;
   font-style:normal;
 }
