--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,41 +3,7 @@
     <div id="skip-link">
       <a href="#main-content" class="element-invisible element-focusable">Skip to main content</a>
     </div>
-    <header class="site-header" id="sticky-header">
-      <div class="skew">
-        <div class="container">
-
-          <a href="/" class="site-logo">
-            <%= image_tag "origin/logo.png" %>
-          </a>
-          <a href="#" class="mobile-nav">
-            <%= image_tag "origin/nav.png" %>
-          </a>
-          <a href="/search" class="site-search">
-            <%= image_tag "origin/search.png" %>
-          </a>
-
-
-          <div class="user-login">
-            <a href="/user">My Account</a>
-          </div>
-          
-          <div class="site-nav">
-            <ul class="site-nav__item">
-              <li class="menu-1092 first"><a href="/whats-new" title="">What's New?</a></li>
-              <li class="menu-1027"><a href="/try-vegan" title="">Try vegan</a></li>
-              <li class="menu-1034"><a href="/take-action" title="">Take action</a></li>
-              <li class="menu-1046"><a href="/resources" title="">Resources</a></li>
-              <li class="menu-1060"><a href="/your-business" title="">Your Business</a></li>
-              <li class="menu-1066"><a href="/society" title="">The Society</a></li>
-              <li class="menu-1150 last"><a href="/shop" title="">Shop</a></li>
-            </ul>
-          </div> <!-- /#main-menu -->
-
-
-        </div>
-      </div>
-    </header> <!-- /.section, /#header -->
+    <%= render "header" %>
 
     <section class="hero flexslider">
       <ul class="slides">
@@ -265,138 +231,9 @@
                 </div>
               </div>
             </section>
-
-            <section class="info-social">
-              <div class="skew">
-                <div class="container">
-                  <div class="info-social__grid">
-                    <div class="info-social__panel">
-                      <div class="latest-news">
-                        <h2><a href="/whats-new/news">Latest News</a></h2>
-                        <div class="region region-footer-firstcolumn">
-
-                          <div class="view view-latest-information view-id-latest_information view-display-id-block view-dom-id-6850ed42b897dbf7c05470d098bc7913">
-
-                            <div class="view-content">
-                              <div>
-                                <a href="/node/104/what-can-you-do-24-hours">What can you do in 24 hours?</a>    
-                              </div>
-                              <div>
-
-                                <a href="/node/104/product-recall-alert">Product Recall Alert</a>    
-                              </div>
-                              <div>
-
-                                <a href="/node/104/successful-egm-2014">Successful EGM 2014</a>    
-                              </div>
-                              <div>
-
-                                <a href="/node/104/run-vegan-fall-love-veganism">Run vegan &amp; fall in love with veganism</a>    
-                              </div>
-                              <div>
-
-                                <a href="/node/104/volunteers-week-1-7-june">Volunteer's Week (1-7 June)</a>    
-                              </div>
-                            </div>
-
-                          </div>  
-                        </div>
-                      </div>
-                    </div>
-                    <div class="info-social__panel">
-                      <div class="upcoming-events">
-                        <h2><a href="/whats-new/events">Upcoming Events</a></h2>
-                        <div class="region region-footer-secondcolumn">
-
-                          <div class="view view-upcoming-events view-id-upcoming_events view-display-id-block view-dom-id-7237ce82f6187bfcffe7c756ca9c9623">
-
-
-
-                            <div class="view-content">
-                              <div>
-
-                                <span class="date-display-single" property="dc:date" datatype="xsd:dateTime" content="2014-09-27T00:00:00+01:00">Saturday, 27 September, 2014</span>    
-                                <a href="/whats-new/events/london-vegfest-0">London VegFest</a>    
-                              </div>
-                            </div>
-                          </div>  
-                        </div>
-                      </div>
-                    </div>
-                    <div class="info-social__panel">
-                      <h2 class="info-social__title--large">
-                        Ready?
-                      </h2>
-                      <div class="social-media">
-                        <a href="https://twitter.com/TheVeganSociety" target="_blank" class="social-media__icon twitter">
-                          Twitter
-                        </a>
-                        <a href="https://www.facebook.com/TheVeganSociety" target="_blank" class="social-media__icon facebook">
-                          Facebook
-                        </a>
-                        <a href="https://plus.google.com/106749689060212010539/posts" target="_blank" class="social-media__icon google-plus">
-                          Google Plus
-                        </a>
-                        <a href="http://www.youtube.com/user/TheVeganSociety" target="_blank" class="social-media__icon you-tube">
-                          You Tube
-                        </a>
-                        <a href="http://instagram.com/theoriginalvegansociety" target="_blank" class="social-media__icon instagram">
-                          Instagram
-                        </a>
-                      </div>
-
-
-                      <div id="mc_embed_signup">
-                        <form action="/sites/all/themes/the_vegan_society/mailchimp-signup.php" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="newsletter-signup validate">
-                          <div id="editrow-email-3" class="mc-field-group">
-                            <label for="mce-EMAIL" class="newsletter-signup__title">Keep updated with our newsletter:</label>
-                            <input class="newsletter-signup__input" type="email" placeholder="Your Email" value="" name="EMAIL" id="mce-EMAIL">
-                          </div>
-
-                          <div id="mce-responses" class="clear">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                          </div>    
-
-                          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                          <div style="position: absolute; left: -5000px;"><input type="text" name="b_4314d5d15f23141a37adee604_c3de6c6324" value=""></div>
-
-
-                          <input accesskey="S" class="button newsletter-signup__button" type="submit" value="Go!" name="subscribe" id="mc-embedded-subscribe">
-                        </form>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </section>
-
-            <footer class="site-footer">
-              <div class="skew">
-                <div class="container">
-                  <a href="/" class="site-footer__logo">
-                    <%= image_tag "origin/v-logo.png" %>
-                  </a>
-                  <nav class="footer-nav">
-                    <div class="region region-footer">
-                      <ul class="menu clearfix"><li class="first leaf"><a href="/sitemap" title="">Site Map</a></li>
-                        <li class="leaf"><a href="/privacy-cookie-policy" title="">Privacy &amp; Cookie Policy</a></li>
-                        <li class="last leaf"><a href="/society/contact-us" title="">Contact Us</a></li>
-                      </ul>  
-                    </div>
-                  </nav>
-                  <span class="small-print">Reg. Charity No: 279228 Company Reg. No: 1468880</span>
-                  <span class="small-print">Copyright © 1944 - 2014 The Vegan Society</span>
-                </div>
-              </div>
-            </footer>
-
-
+            <%= render "info_social" %>
+            <%= render "footer" %>
           </div>
-
-
-
 
           <div class="mobile-nav-list">
 
@@ -408,10 +245,8 @@
               <li class="menu-1066"><a href="/society" title="">The Society</a></li>
               <li class="menu-1150 last"><a href="/shop" title="">Shop</a></li>
             </ul>
-          </div>    
-          <script type="text/javascript" src="http://www.vegansociety.com/sites/default/files/js/js_Dpwj9_jdZx11LB9vWakYPT-NglBvlNPbjDg8kKHykyQ.js"></script>
-
-
+          </div>   
+          <%= javascript_include_tag 'origin/js_Dpwj9_' %> 
 
         </div>
 
